# SpeedBlocks

./: .bettercodehub.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CreateWidgets.cpp  EmptyResourcePath.cpp  EmptyResourcePath.h  Makefile  MingwConvert.cpp  MingwConvert.h  README  README.md  Recording.cpp  Recording.h  ResourcePath.mm  ScrollList.cpp  ScrollList.h  SpeedBlocks.props.edit  SpeedBlocks.rc  SpeedBlocks.res  SpeedBlocks.sln  SpeedBlocks.vcxproj  SpeedBlocks.vcxproj.filters  gameField.cpp  gameField.h  gameFieldDrawer.cpp  gamePlay.cpp  gamePlay.h  gui.cpp  gui.h  main.cpp  network.cpp  network.h  neutralUI.txt  optionSet.cpp  optionSet.h  packetcompress.cpp  packetcompress.h  packets.cpp  (+10 more)
AI/: population.1-cycles.stack  population.10-cycles.stack  population.20-cycles.stack  population.30-cycles.stack  population.40-cycles.stack  population.50-cycles.stack  population.6-cycles.downstack  population.60-cycles.stack  population.67-cycles.stack  population.7-cycles.downstack  population.8-cycles.downstack  population.9-cycles.downstack
Debug/: SpeedBlocks.ilk  tgui.lib  vc140.idb
Debug/SpeedBlocks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpeedBlocks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/Speedblocks latest/: SpeedBlocks.ilk  tgui-d.lib  vc140.idb
Debug/Speedblocks latest/SpeedBlocks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpeedBlocks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/Speedblocks latest/media/: TransparentGrey.txt
cmake/Modules/: FindSFML.cmake  FindThreads.cmake
gui/: AreYouSure.cpp  AreYouSure.h  BugReport.cpp  BugReport.h  Connecting.cpp  Connecting.h  GameOptions.cpp  GameOptions.h  GameplayUI.cpp  GameplayUI.h  LoginBox.cpp  LoginBox.h  MainMenu.cpp  MainMenu.h  OnlineplayUI.cpp  OnlineplayUI.h  PerformanceOutput.cpp  PerformanceOutput.h  ScrollList.cpp  ScrollList.h  guiBase.cpp  guiBase.h
media/: BabyBlue.txt  TransparentGrey.txt  speedblocks.icns
src/: GameDraw.cpp  GameDraw.h  UIGameState.cpp  UIGameState.h  gameFieldDrawer.cpp  gui.cpp  gui.h  main.cpp  packetcompress.cpp  packets.cpp
src/gameplay/: AIManager.cpp  AIManager.h  BPMCount.cpp  BPMCount.h  Combo.cpp  Combo.h  DropDelay.cpp  DropDelay.h  GameDataSender.cpp  GameDataSender.h  GameField.cpp  GameField.h  GameFieldText.cpp  GameFieldText.h  GamePlay.cpp  GamePlay.h  GameplayGameState.cpp  GameplayGameState.h  Garbage.cpp  Garbage.h  Recording.cpp  Recording.h  gameField.cpp  gameField.h  gamePlay.cpp  gamePlay.h  pieces.cpp  pieces.h  randomizer.cpp  randomizer.h
src/gui/: AlertsUI.cpp  AlertsUI.h  AreYouSure.cpp  AreYouSure.h  BugReport.cpp  BugReport.h  ChallengesGameUI.cpp  ChallengesGameUI.h  ChallengesUI.cpp  ChallengesUI.h  ChatScreen.cpp  ChatScreen.h  Connecting.cpp  Connecting.h  GameFieldDrawer.cpp  GameFieldDrawer.h  GameOptions.cpp  GameOptions.h  GameStandings.cpp  GameStandings.h  GameplayUI.cpp  GameplayUI.h  GuiAlign.h  GuiBase.cpp  GuiBase.h  GuiElements.cpp  GuiElements.h  LoginBox.cpp  LoginBox.h  MainMenu.cpp  MainMenu.h  OnlineplayUI.cpp  OnlineplayUI.h  PerformanceOutput.cpp  PerformanceOutput.h  PopupMenu.cpp  PopupMenu.h  ReplayUI.cpp  ReplayUI.h  ScoreScreen.cpp  (+15 more)
src/resources/: AnimatedBackground.cpp  AnimatedBackground.h  CountdownHandle.cpp  CountdownHandle.h  FieldBackMaker.cpp  FieldBackMaker.h  GameSignals.cpp  GameSignals.h  Options.cpp  Options.h  PatchCheck.cpp  PatchCheck.h  PingHandle.cpp  PingHandle.h  ResourceManager.cpp  ResourceManager.h  ResourcePath.mm  Resources.cpp  Resources.h  Signal.cpp  Signal.h  Textures.cpp  Textures.h  machineid.cpp  network.cpp  network.h  optionSet.cpp  optionSet.h  packetcompress.cpp  packetcompress.h  sounds.cpp  sounds.h  textures.cpp  textures.h
src/utility/: AI.h  PacketCompressReplay.cpp  PacketCompressReplay.h  Packets.hpp  ResourcePath.mm  RunAsAdmin.mm  TaskQueue.cpp  TaskQueue.h  TestField.cpp  TestField.h  TextureAndSprite.cpp  machineid.h
src/utility/TGUI Widgets/: ButtonGrid.cpp  ButtonGrid.hpp  ScrollList.cpp  ScrollList.hpp  TguiWidgets.cpp  TguiWidgets.hpp  WidgetAlign.h  neutralUI.txt
src/utility/TGUI Widgets/cmake/Modules/: FindSFML.cmake  Findcurl.cmake
src/utils/: AI.cpp  AI.h  ResourcePath.hpp  RunAsAdmin.hpp  TaskQueue.cpp  TaskQueue.h  TestField.cpp  TestField.h  TextureAndSprite.cpp  TextureAndSprite.h
x64/Debug/: vc140.idb
x64/Debug/SpeedBlocks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpeedBlocks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
